Adding solved problems in Troubleshooting